# telegram_bot_template_rust

./: .rustfmt.toml  Cargo.toml  Dockerfile  README.md  config.example.toml
.github/workflows/: ci.yml  rust.yml
src/: bot.rs  config.rs  main.rs
