[package]
name = "telegram_bot_template_rust"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.71"
env_logger = "0.10.0"
log = "0.4.19"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
signal-hook = "0.3.15"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "sync"] }
toml = "0.7.4"
